[package]
name = "timely-util"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Utility abstractions on top of Timely Dataflow"
repository = "https://github.com/cdstanford/timely-util"
readme = "README.md"

[dependencies]
abomonation = "0.7.3"
abomonation_derive = "0.5.0"
chrono = "0.4.15"
nix = "0.19.0"
structopt = "0.3.20"
timely = "0.12.0"
