[package]
name = "timely-util"
version = "0.2.1"
edition = "2024"
license = "MIT"
description = "Utility abstractions on top of Timely Dataflow"
repository = "https://github.com/cdstanford/timely-util"
readme = "README.md"

[dependencies]
abomonation = "0.7.3"
chrono = "0.4.45"
nix = { version = "0.31.3", features = ["process"] }
serde = "1.0.228"
structopt = "0.3.26"
timely = "0.31.0"
